# AdventOfCode2024

./: .gitignore  CMakeLists.txt  README.md
puzzle_inputs/actual/: actual.md
puzzle_inputs/test/: test.md
src/: day1.cpp  day2.cpp  template.cpp
